# tt_server_rust

./: .gitignore  Cargo.toml  LICENSE  README.md
guard/: mod.rs  rust_annotation.rs  rust_box.rs  rust_condition.rs  rust_debug.rs  rust_enclosure.rs  rust_enum.rs  rust_error.rs  rust_function.rs  rust_iterator.rs  rust_lock.rs  rust_loop.rs  rust_option.rs  rust_own.rs  rust_pack.rs  rust_slice.rs  rust_struct.rs  rust_trait.rs  rust_var.rs  rust_var_types.rs  rust_vec.rs
tt_auth/: Cargo.toml  readme.md
tt_auth/src/: lib.rs
tt_auth/src/api/: mod.rs  permission.rs  permission_menu.rs  user.rs  user_role.rs  user_role_group.rs
tt_auth/src/db/: _tables.sql  mod.rs  permission.rs  permission_menu.rs  user.rs  user_role.rs  user_role_group.rs
tt_auth/src/def/: err.rs  mod.rs  permission.rs  permission_menu.rs  token.rs  types.rs  user.rs  user_role.rs  user_role_group.rs
tt_auth/src/service/: admin_user_role.rs  mod.rs  permission.rs  permission_menu.rs  setup.rs  user.rs  user_role.rs  user_role_group.rs
tt_auth/src/util/: jwt.rs
tt_core/: Cargo.toml
tt_core/src/: env.rs  http_server.rs  lib.rs  router.rs  template.rs  time.rs
tt_core/src/def/: err.rs  mod.rs  req.rs  res.rs  resp_json.rs  resp_text_plain.rs
tt_core/src/json/: serialize.rs
tt_core/src/middleware/http/: mod.rs  options_auto_ok.rs
tt_core/src/util/: arr.rs  json.rs  marco.rs  mod.rs  uuid.rs  val.rs
tt_core_database/: Cargo.toml
tt_core_database/src/: lib.rs
tt_core_database/src/db/: mysql.rs
tt_core_database/src/def/: err.rs  mod.rs
tt_core_database/src/pool/: mysql.rs
tt_server_demo/: Cargo.toml
tt_server_demo/src/: main.rs
tt_server_demo/src/api/: test.rs
tt_server_demo/src/page/: index.rs
tt_server_demo/templates/: index.html
tt_task/: Cargo.toml
tt_task/src/: db_mysql.rs  main.rs
