# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "tt_auth"
version = "0.1.0"
edition = "2021"

[dependencies]

tt_core = { path = "../tt_core" }
tt_core_database = { path = "../tt_core_database" }

serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
serde_with = { version="3.8.1", features = ["chrono"] }
serde_repr = "0.1.19"

# jwt鉴权
jsonwebtoken = "7"
derive = "1.0.0"

sqlx = { version = "0.7.4", features = ["mysql", "chrono", "runtime-tokio-rustls"] }

tokio = { version = "1.37.0", features = ["full"] }

chrono = "0.4.38"

axum-core = "0.4.3"
axum = "0.7.5"
sqlx-core = "0.7.4"
tower = "0.4.13"

tower-http = { version = "0.5.2", features = ["cors"] }

