# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "tt_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
tower = "0.4.13"
tokio = { version = "1.37.0", features = ["full"] }
askama = "0.12.1"
axum = "0.7.5"
axum-core = "0.4.3"
chrono = "0.4.38"
dotenv = "0.15.0"
uuid = { version = "1.8.0", features = ["std", "v4", "v7", "fast-rng", "macro-diagnostics"] }
hyper = "1.3.1"
lazy_static = "1.4.0"

serde = "1.0.201"
serde_json = "1.0.117"
serde_with = { version="3.8.1", features = ["chrono"] }

snowflake = "1.3.0"
sqlx = "0.7.4"
time = { version = "0.3.36", features = ["macros"] }

tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
validator = "0.18.1"
validator_derive = "0.18.1"
once_cell = "1.19.0"
