[package]
name = "tt_task"
version = "0.1.0"
edition = "2021"

[dependencies]

tt_core = { path = "../tt_core" }
tt_core_database = { path = "../tt_core_database" }

anyhow = "1.0.86"
askama = "0.12.1"
axum-core = "0.4.3"
axum = "0.7.5"
chrono = "0.4.38"
dotenv = "0.15.0"
hyper = "1.3.1"
lazy_static = "1.4.0"
serde = "1.0.201"
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio-rustls"] }
time = { version = "0.3.36", features = ["macros"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }


